--- a/react-player/src/styles/_player.scss
+++ b/react-player/src/styles/_player.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: brown;
 }
 
 .time-control {
