--- a/react-player/src/styles/_song.scss
+++ b/react-player/src/styles/_song.scss
@@ -4,4 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    img {
+        width: 20%;
+        border-radius: 50%;
+    }
 }
