--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,5 +4,22 @@
     box-sizing: border-box;
 }
 
+h1,
+h2,
+h3 {
+    color: rgb(54, 54, 54)
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+h3,
+h4 {
+    font-weight: 400;
+    color: rgb(100, 100, 100);
+}
+
 @import "./player";
 @import "./song";
+@import "./library"
