--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,9 @@
     background: #fff;
     box-shadow: 2px 2px 50px gray;
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
     h2 {
         padding: 2rem;
     }
@@ -57,5 +60,5 @@
   }
   
   .selected {
-    background: royalblue;
+    background: rgb(154, 173, 232);
   }
