--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -42,7 +42,7 @@ input[type="range"]:focus {
   }
   
 .track {
-    background: yellow;
+    background: rgb(93, 151, 237);
     width: 100%;
     height: 16px;
     position: relative;
