--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,13 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.App {
+    transition: all 0.5s ease;
+  }
+  .library-active {
+    margin-left: 30%;
+  }
+
 h3,
 h4 {
     font-weight: 400;
